force-app/main/default/objects/GF_Ticket__c/fields/Additional_Data__c.field-meta.xml
<CustomField>
    <fullName>Additional_Data__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Additional Data</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>