force-app/main/default/objects/GF_Ticket__c/fields/Body__c.field-meta.xml
<CustomField>
    <fullName>Body__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Body</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>