force-app/main/default/objects/GF_Ticket__c/fields/DIVR_Id__c.field-meta.xml
<CustomField>
    <fullName>DIVR_Id__c</fullName>
    <description>Digital IVR Id. External Id for Digital IVR to identify across systems.</description>
    <label>DIVR Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>