force-app/main/default/objects/GF_Ticket__c/fields/First_Level__c.field-meta.xml
<CustomField>
    <fullName>First_Level__c</fullName>
    <description>First Level Info of Digital IVR</description>
    <label>First Level</label>
    <length>255</length>
    <type>Text</type>
</CustomField>