force-app/main/default/objects/GF_Ticket__c/fields/Product_Area__c.field-meta.xml
<CustomField>
    <fullName>Product_Area__c</fullName>
    <description>This will have the predicted intent sent from panda.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Product Area</label>
    <length>255</length>
    <type>Text</type>
</CustomField>