force-app/main/default/objects/GF_Ticket__c/fields/Requester_Email__c.field-meta.xml
<CustomField>
    <fullName>Requester_Email__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Requester Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>