force-app/main/default/objects/GF_Ticket__c/fields/Requester_User_Id__c.field-meta.xml
<CustomField>
    <fullName>Requester_User_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Requester User Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>