force-app/main/default/objects/GF_Ticket__c/fields/Second_Level__c.field-meta.xml
<CustomField>
    <fullName>Second_Level__c</fullName>
    <description>Second Level Info of Digital IVR</description>
    <label>Second Level</label>
    <length>255</length>
    <type>Text</type>
</CustomField>