force-app/main/default/objects/GF_Ticket__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Subject</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>