force-app/main/default/objects/GF_Ticket__c/fields/Support_Level__c.field-meta.xml
<CustomField>
    <fullName>Support_Level__c</fullName>
    <description>This will have the predicted tier level sent from panda (NLP)</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Support Level</label>
    <length>255</length>
    <type>Text</type>
</CustomField>