force-app/main/default/objects/GF_Ticket__c/fields/Tags__c.field-meta.xml
<CustomField>
    <fullName>Tags__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Tags</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>