force-app/main/default/objects/GF_Ticket__c/fields/Third_Level__c.field-meta.xml
<CustomField>
    <fullName>Third_Level__c</fullName>
    <description>Third Level Info of Digital IVR</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Third Level</label>
    <length>255</length>
    <type>Text</type>
</CustomField>